"Visualisasi dan Perubahan Akhir"

--- a/src/models/CNN_Bi_LSTM.ipynb
+++ b/src/models/CNN_Bi_LSTM.ipynb
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "sentences, labels = parse_data_from_file(\"src/data/newsdatasetshuffle_4000.csv\")\n",
+    "sentences, labels = parse_data_from_file(\"\\\\Users\\\\Mahesa\\\\Documents\\\\INI KULIAH BUKAN MAIN MAIN\\\\Competition\\\\GEMASTIK 2022\\\\Data Mining\\\\src\\data\\\\newsdatasetshuffle_4000.csv\")\n",
     "\n",
     "print(f\"There are {len(sentences)} sentences in the dataset.\\n\")\n",
     "print(f\"There are {len(labels)} labels in the dataset.\\n\")\n",
