--- a/src/models/CNN_LSTM.ipynb
+++ b/src/models/CNN_LSTM.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "with open(\"src/data/newsdatasetshuffle_4000.csv\", 'r') as csvfile:\n",
+    "with open(\"\\\\Users\\\\Mahesa\\\\Documents\\\\INI KULIAH BUKAN MAIN MAIN\\\\Competition\\\\GEMASTIK 2022\\\\Data Mining\\\\src\\data\\\\newsdatasetshuffle_4000.csv\", 'r') as csvfile:\n",
     "    print(f\"Header:\\n\\n{csvfile.readline()}\")\n",
     "    print(f\"Data point:\\n\\n{csvfile.readline()}\")"
    ]
