--- a/src/models/model_indoBERT.ipynb
+++ b/src/models/model_indoBERT.ipynb
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"src/data/newsdatasetshuffle_4000.csv\")\n",
+    "df = pd.read_csv(\"\\\\Users\\\\Mahesa\\\\Documents\\\\INI KULIAH BUKAN MAIN MAIN\\\\Competition\\\\GEMASTIK 2022\\\\Data Mining\\\\src\\data\\\\newsdatasetshuffle_4000.csv.csv\")\n",
     "raw_data = df.iloc[:,3:].drop('timestamp', axis=1)\n",
     "raw_data.head()"
    ]
