--- a/src/models/model_XGBoostt.ipynb
+++ b/src/models/model_XGBoostt.ipynb
@@ -557,17 +557,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import pickle\n",
     "\n",
     "#Unigram\n",
     "vec_TF_IDF = TfidfVectorizer(ngram_range=(1,1))\n",
     "vec_TF_IDF.fit(X)\n",
     "\n",
-    "x_tf_idf = vec_TF_IDF.transform(X)"
+    "x_tf_idf = vec_TF_IDF.transform(X)\n",
+    "pickle.dump(vec_TF_IDF.vocabulary_,open(\"feature_tf-idf.pkl\",\"wb\"))"
    ]
   },
   {
@@ -1345,11 +1347,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_model('model/xgboost-model.h5')"
+    "lst = ['Pemerintah Menetapkan Batas Tarif Tertinggi Rapid Test Antigen Covid-19','Pemerintah Izinkan Warga di Bawah 45 Tahun Kembali Beraktivitas ','Pengamat Minta Pemerintah Tetap Buka Impor Produk dari Cina','Tuntut Upah Naik 13 Persen, Demo Buruh Nyalakan Smoke Bomb di Patung Kuda','BPS Beberkan Kondisi Ekspor RI ke Cina Selama Pandemi dan Perang Rusia-Ukraina','Perang Ukraina, Tentara Belarus Bergabung dengan Rusia','Jika Ukraina Bergabung NATO, Pejabat Rusia: Perang Dunia III Akan Terjadi','Ini Bahaya Radiasi Nuklir bagi Manusia Jika Perang Nuklir Dunia Terjadi','Alasan Gibran Wajibkan Industri Kecil dan Menengah di Solo Go Digital','Qualcomm, Razer dan Verizon Perkenalkan Perangkat Game 5G dengan Snapdragon G3x','Smarthome Samsung - Google: Apapun Perangkatnya, Aplikasinya Tetap','Energy Watch Beberkan Kendala Listrik Tenaga Surya: Belum Ada Teknologi Baterai Murah','Mahasiswa Universitas Teknologi Sumbawa Bikin Mobil Listrik, Namanya NgebUTS','Mandiri Festival Properti Indonesia 2022 Hadirkan 37 Projek dari 17 Pengembang','Pemerintah Maksimalkan Potensi Industri Kopi Nasional','Industri Haus Listrik Terancam Gulung Tikar, Kadin: Investor Pelan-pelan Pindah ke Luar Negeri','Manfaat Garam dalam Industri dan Medis Modern','CEO Avoskin Cerita Awal Bangun Usaha, Kumpulkan Tabungan Sejak Jadi Agen Properti','Festival Properti Indonesia Digelar, Ada Promo KPR Mandiri Berbunga 2,4 Persen','Deal, Ciputra Group Berkomitmen Bangun Properti 300 Hektar di IKN ']\n",
+    "classes = ['industri', 'pemerintahan', 'perang', 'properti', 'teknologi']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_new = []\n",
+    "for i in range(len(lst)):\n",
+    "    txt = text_preprocessing(lst[i])\n",
+    "    txt_1 = remove_stop_words(txt)\n",
+    "    txt_2 = stemming(txt_1)\n",
+    "    # clean = vec_TF_IDF.fit_transform(txt_2)\n",
+    "    # predict = model.predict(clean)\n",
+    "    lst_new.append(txt_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['perintah tetap batas tarif tinggi rapid test antigen covid',\n",
+       " 'perintah izin warga aktivitas',\n",
+       " 'amat perintah buka impor produk cina',\n",
+       " 'tuntut upah persen demo buruh nyala smoke bomb patung kuda',\n",
+       " 'bps kan kondisi ekspor ri cina pandemi perang rusiaukraina',\n",
+       " 'perang ukraina tentara belarus gabung rusia',\n",
+       " 'ukraina gabung nato jabat rusia perang dunia iii',\n",
+       " 'bahaya radiasi nuklir manusia perang nuklir dunia',\n",
+       " 'alas gibran wajib industri tengah solo go digital',\n",
+       " 'qualcomm razer verizon kenal perangkat game g snapdragon gx',\n",
+       " 'smarthome samsung google apa perangkat aplikasi',\n",
+       " 'energy watch kan kendala listrik tenaga surya teknologi baterai murah',\n",
+       " 'mahasiswa universitas teknologi sumbawa bikin mobil listrik nama ngebuts',\n",
+       " 'mandiri festival properti indonesia hadir projek kembang',\n",
+       " 'perintah maksimal potensi industri kopi nasional',\n",
+       " 'industri haus listrik ancam gulung tikar kadin investor pelanpelan pindah negeri',\n",
+       " 'manfaat garam industri medis modern',\n",
+       " 'ceo avoskin cerita bangun usaha kumpul tabung agen properti',\n",
+       " 'festival properti indonesia gelar promo kpr mandiri bunga persen',\n",
+       " 'deal ciputra group komitmen bangun properti hektar ikn']"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_vec = TfidfVectorizer(decode_error=\"replace\", vocabulary=set(pickle.load(open(\"feature_tf-idf.pkl\", \"rb\"))))\n",
+    "a = loaded_vec.fit_transform(lst_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 3, 2, 2, 2, 2, 0, 4, 4, 4, 4, 3, 0, 0, 0, 3, 3, 3],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_model('xgboost-model.h5')"
    ]
   },
   {
